# syscall-anomaly

./: Cargo.toml  README.md  environment.yml
examples/: transformer.rs
models/albert/: README.md
notebook/: albert-anomaly-detect.ipynb
src/: decoder.rs  main.rs  markov.rs  syscall.rs
