[package]
name = "syscall-anomaly"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
description = "syscall anomaly detection"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
clap = "3.0"
nix = "0.20.0"
syscalls = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"